--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>kafka-lag-based-assignor</artifactId>
     <name>${project.artifactId}</name>
     <packaging>jar</packaging>
-    <version>1.1.0</version>
+    <version>2.0.0</version>
 
     <description>
         Kafka partition assignor that distributes lag evenly across a consumer group
@@ -35,6 +35,10 @@
             <email>grantneale@users.noreply.github.com</email>
             <organization>Grant Neale</organization>
             <organizationUrl>https://github.com/grantneale</organizationUrl>
+        </developer>
+        <developer>
+            <name>Marvin Froeder</name>
+            <email>velo dot br at gmail dot com</email>
         </developer>
     </developers>
 
@@ -98,13 +102,13 @@
             <dependency>
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-clients</artifactId>
-                <version>0.10.2.0</version>
+                <version>2.5.0</version>
             </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.25</version>
+                <version>1.7.30</version>
             </dependency>
 
             <!-- Test -->
